--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <a href="https://raw.githubusercontent.com/lombard001/soft/refs/heads/main/MSP2.mood.user.js" class="bookmark-btn" id="btnMood">
         Install MSP2 MOOD
       </a>
-      <a href="#" class="bookmark-btn disabled" id="btnTroll">
+      <!-- Updated MSP2 TROLL button -->
+      <a href="https://cdn.jsdelivr.net/gh/lombard001/soft@refs/heads/main/msp2troll.user.js" class="bookmark-btn" id="btnTroll">
         Install MSP2 Troll
       </a>
       <a href="arc-msp.html" class="bookmark-btn" id="btnArcMSP">
