--- a/arc-msp.html
+++ b/arc-msp.html
@@ -11,7 +11,7 @@
   
   <div class="container">
     <button class="back-btn" onclick="window.location.href='index.html'">← Back to Home</button>
-    <h1 class="title">MSP2 ARC Gallery</h1>
+    <h1 class="title">MSP2 ARC</h1>
 
     <!-- Photo Gallery -->
     <div id="gallery" class="gallery"></div>
