--- a/arc-msp.html
+++ b/arc-msp.html
@@ -9,8 +9,21 @@
 <body>
   <canvas id="starfield"></canvas>
   
+  <!-- Music Control Button -->
+  <button id="musicToggle" class="music-toggle">
+    <span id="musicIcon">🔊</span>
+  </button>
+  
+  <!-- Hidden YouTube iframe for background music -->
+  <iframe id="backgroundMusic" 
+          src="https://www.youtube.com/embed/aLV59GhhAYA?autoplay=1&loop=1&playlist=aLV59GhhAYA&controls=0&showinfo=0&rel=0&modestbranding=1&playsinline=1&enablejsapi=1&mute=1" 
+          frameborder="0" 
+          allow="autoplay; encrypted-media" 
+          style="display: none;">
+  </iframe>
+  
   <div class="container">
-    <button class="back-btn" onclick="window.location.href='index.html'">← Back to Home</button>
+    <button class="back-btn" onclick="goBackHome()">← Back to Home</button>
     <h1 class="title">MSP2 ARC</h1>
 
     <!-- Photo Gallery -->
@@ -25,6 +38,7 @@
   </div>
   
   <script src="scripts/starfield.js"></script>
+  <script src="scripts/music-control.js"></script>
   <script src="scripts/arc-msp.js"></script>
 </body>
 </html>
