--- a/arc-msp.html
+++ b/arc-msp.html
@@ -10,7 +10,37 @@
   <canvas id="starfield"></canvas>
   
   <!-- Music Control Button -->
-  <button id="musicToggle" class="music-toggle">
+  <button id="musicToggle" class="music-toggle"><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MSP2 ARC</title>
+  <link rel="stylesheet" href="styles/arc-msp.css">
+</head>
+<body>
+  <canvas id="starfield"></canvas>
+  
+  <div class="container">
+    <button class="back-btn" onclick="window.location.href='index.html'">← Back to Home</button>
+    <h1 class="title">MSP2 ARC</h1>
+
+    <!-- Photo Gallery -->
+    <div id="gallery" class="gallery"></div>
+    
+    <!-- Lightbox -->
+    <div id="lightbox" class="lightbox">
+      <span class="close" onclick="closeLightbox()">&times;</span>
+      <img id="lightboxImg" src="" alt="preview">
+      <p id="lightboxCaption"></p>
+    </div>
+  </div>
+  
+  <script src="scripts/starfield.js"></script>
+  <script src="scripts/arc-msp.js"></script>
+</body>
+</html>
+
     <span id="musicIcon">🔊</span>
   </button>
   
