--- a/index.html
+++ b/index.html
@@ -50,18 +50,7 @@
         If nothing happens, install
         <a href="https://violentmonkey.github.io/get-it/" target="_blank" style="color:#6effb2;">Violentmonkey</a> first.
       </p>
-      <a href="https://raw.githubusercontent.com/lombard001/soft/refs/heads/main/msp2soft.user.js" class="bookmark-btn" id="btnSoftShop">
-        Install MSP2 Soft Shop
-      </a>
-      <a href="https://raw.githubusercontent.com/lombard001/soft/refs/heads/main/MSP2.mood.user.js" class="bookmark-btn" id="btnMood">
-        Install MSP2 MOOD
-      </a>
-      <a href="https://cdn.jsdelivr.net/gh/lombard001/soft@refs/heads/main/msp2troll.user.js" class="bookmark-btn" id="btnTroll">
-        Install MSP2 Troll
-      </a>
-      <a href="arc-msp.html" class="bookmark-btn" id="btnArcMSP">
-        ARC MSP
-      </a>
+      <!-- Butonlar kaldırıldı -->
     </div>
 
     <div class="info" id="infoText">
