--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MSP2 Playground</title>
   <link rel="stylesheet" href="styles/main.css">
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1577065347252131"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Loading Screen -->
