--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
   <!-- Main Content (Initially Hidden) -->
   <div id="mainContent" class="main-content" style="display: none;">
     <canvas id="starfield"></canvas>
-    
-    <!-- Music Control Button -->
-    <button id="musicToggle" class="music-toggle">
-      <span id="musicIcon">🔊</span>
-    </button>
 
     <div class="top-bar">
       <button class="about-btn" id="aboutBtn">&#8505; <span id="aboutBtnTxt">About</span></button>
       <div class="top-bar-right">
         <button class="news-btn" id="newsBtn">📰 <span id="newsBtnTxt">News</span></button>
         <button class="lang-btn" id="langBtn">&#127760; <span id="langBtnTxt">Language</span></button>
+        <!-- Music Control Button moved here -->
+        <button id="musicToggle" class="music-toggle">
+          <span id="musicIcon">🔊</span>
+        </button>
       </div>
     </div>
     
@@ -70,7 +69,7 @@
     </div>
 
     <!-- About Modal -->
-    <div id="aboutModal" style="display:none;">
+    <div id="aboutModal" class="modal-overlay" style="display:none;">
       <div class="modal-bg">
         <div class="modal">
           <button class="modal-close" onclick="closeModal('aboutModal')">&times;</button>
@@ -82,7 +81,7 @@
     </div>
 
     <!-- News Modal -->
-    <div id="newsModal" style="display:none;">
+    <div id="newsModal" class="modal-overlay" style="display:none;">
       <div class="modal-bg">
         <div class="modal">
           <button class="modal-close" onclick="closeModal('newsModal')">&times;</button>
@@ -93,7 +92,7 @@
     </div>
 
     <!-- Language Modal -->
-    <div id="langModal" style="display:none;">
+    <div id="langModal" class="modal-overlay" style="display:none;">
       <div class="modal-bg">
         <div class="modal">
           <button class="modal-close" onclick="closeModal('langModal')">&times;</button>
