--- a/admin.html
+++ b/admin.html
@@ -131,6 +131,7 @@
   
   <script src="scripts/starfield.js"></script>
   <script src="scripts/music-control.js"></script>
+  <script src="scripts/supabase-arc.js"></script>
   <script src="scripts/arc-msp.js"></script>
 </body>
 </html>
