--- a/admin.html
+++ b/admin.html
@@ -132,5 +132,6 @@
   <script src="scripts/starfield.js"></script>
   <script src="scripts/music-control.js"></script>
   <script src="scripts/arc-msp.js"></script>
+  <script src="scripts/data-manager.js"></script>
 </body>
 </html>
