--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
     </div>
   </div>
 
-  <script src="scripts/starfield.js"></script>
-  <script src="scripts/language.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="scripts/data-manager.js"></script>
+   <script src="scripts/starfield.js"></script>
+   <script src="scripts/language.js"></script>
+   <script src="scripts/main.js"></script>
 </body>
 </html>
