--- a/arc-msp.html
+++ b/arc-msp.html
@@ -38,8 +38,9 @@
     </div>
   </div>
   
-  <script src="scripts/starfield.js"></script>
-  <script src="scripts/music-control.js"></script>
-  <script src="scripts/arc-msp.js"></script>
+  <script src="scripts/data-manager.js"></script>
+   <script src="scripts/starfield.js"></script>
+   <script src="scripts/music-control.js"></script>
+   <script src="scripts/arc-msp.js"></script>
 </body>
 </html>
