--- a/arc-msp.html
+++ b/arc-msp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
   
   <div class="container">
     <div class="top-controls">
-      <button class="back-btn" onclick="goBackHome()">← Back to Home</button>
+      <button class="back-btn" onclick="goBackHome()">← Ana Sayfaya Dön</button>
       <!-- Music Control Button -->
       <button id="musicToggle" class="music-toggle">
         <span id="musicIcon">🔊</span>
