--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <h1 class="loading-title">MSP2 Playground</h1>
       <div class="loading-spinner">
         <div class="spinner-ring"></div>
-        <!-- Diğer spinner-ring'ler kaldırıldı -->
       </div>
       <div class="loading-info" id="loadingInfo">Yükleniyor...</div>
     </div>
@@ -35,11 +34,9 @@
     <canvas id="starfield"></canvas>
 
     <div class="top-bar">
-      <button class="about-btn" id="aboutBtn">&#8505; <span id="aboutBtnTxt">Hakkında</span></button>
+      <button class="about-btn" id="aboutBtn">&#8505; <span>Hakkında</span></button>
       <div class="top-bar-right">
-        <button class="news-btn" id="newsBtn">📰 <span id="newsBtnTxt">Haberler</span></button>
-        <button class="lang-btn" id="langBtn">&#127760; <span id="langBtnTxt">Dil</span></button>
-        <!-- Music Control Button moved here -->
+        <!-- Music Control Button -->
         <button id="musicToggle" class="music-toggle">
           <span id="musicIcon">🔊</span>
         </button>
@@ -48,30 +45,25 @@
     
     <div class="overlay" id="mainOverlay">
       <h1>MSP2 Glitch</h1>
-      <p class="subtext" id="subtextMain">
-        Artık geliştirilmiş araç ile her şeyi rahatça yapabilirsiniz.<br>
-        Eğer bir şey olmuyorsa, önce <a href="https://violentmonkey.github.io/get-it/" target="_blank" style="color:#6effb2;">Violentmonkey</a> kurun.
+      <p class="subtext">
+        Artık geliştirilmiş araç ile her şeyi rahatça yapabilirsiniz.
+        Eğer bir şey olmuyorsa, önce
+        <a href="https://violentmonkey.github.io/get-it/" target="_blank" style="color:#6effb2;">Violentmonkey</a> kurun.
       </p>
-      <!-- Statik butonlar buraya eklendi -->
-      <div id="dynamicButtons" class="dynamic-buttons-grid">
-        <a href="https://raw.githubusercontent.com/lombard001/soft/refs/heads/main/MSP2.mood.user.js" class="dynamic-btn" target="_blank">
-          <div class="dynamic-btn-text">MSP2 MOD</div>
+      <!-- Static buttons -->
+      <div class="static-buttons-grid">
+        <a href="https://raw.githubusercontent.com/lombard001/soft/refs/heads/main/MSP2.mood.user.js" class="static-btn" target="_blank">
+          <div class="static-btn-text">MSP2 MOD</div>
         </a>
-        <a href="arc-msp.html" class="dynamic-btn" target="_blank">
-          <div class="dynamic-btn-text">ARC MSP</div>
+        <a href="arc-msp.html" class="static-btn">
+          <div class="static-btn-text">ARC MSP</div>
         </a>
       </div>
     </div>
 
-    <div class="info" id="warningText">
+    <div class="warning-info" id="warningInfo">
       <div class="warning-icon">⚠️</div>
-      <div class="warning-message">Uyarı: Bu modlar 15.09.2025 itibarıyla güncelleme desteği kesildi, ileride optimizasyon ve performans düşüşü yaşanabilir.</div>
-    </div>
-
-    <!-- Notification -->
-    <div class="notification" id="trollNotification">
-      <div class="notification-icon">ℹ️</div>
-      <div class="notification-text" id="trollNotificationText">MSP2 Troll lisans süresi doldu.</div>
+      <div class="warning-text">Bu modlar 15.09.2025 tarihi itibariyle artık güncelleme desteği kesildi. İlerleyen zamanlarda optimizasyon ve performans düşüşü yaşanabilir.</div>
     </div>
 
     <!-- About Modal -->
@@ -79,7 +71,7 @@
       <div class="modal-bg">
         <div class="modal">
           <button class="modal-close" onclick="closeModal('aboutModal')">&times;</button>
-          <h2 style="margin:0 0 10px 0;" id="aboutTitle">MSP2 MODS Hakkında</h2>
+          <h2 style="margin:0 0 10px 0;">MSP2 MODS Hakkında</h2>
           <div id="aboutText">
             <p>
               MSP2 MODS; MSP2 için özel modlar ve yardımcı araçlar sunan bir platformdur.
@@ -93,37 +85,9 @@
             </p>
             <h4 style="color: #6effb2; margin: 15px 0 10px 0;">Mevcut Özellikler:</h4>
             <ul>
-                <li><b>MSP2 MOD</b>: Özel MSP2 özellikleri ve modları yükler.</li>
-                <li><b>ARC MSP</b>: MSP2 fotoğraf arşivine erişim sağlar.</li>
+              <li><b>MSP2 MOD</b>: MSP2 için gelişmiş özellikler ve iyileştirmeler</li>
+              <li><b>ARC MSP</b>: Fotoğraf galerisi ve arşiv yönetimi</li>
             </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- News Modal -->
-    <div id="newsModal" class="modal-overlay" style="display:none;">
-      <div class="modal-bg">
-        <div class="modal">
-          <button class="modal-close" onclick="closeModal('newsModal')">&times;</button>
-          <h2 style="margin:0 0 12px 0;" id="newsTitle">Haberler & Güncellemeler</h2>
-          <div id="newsList">
-            <p style="color:#ccc;text-align:center;">Henüz haber mevcut değil.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Language Modal -->
-    <div id="langModal" class="modal-overlay" style="display:none;">
-      <div class="modal-bg">
-        <div class="modal">
-          <button class="modal-close" onclick="closeModal('langModal')">&times;</button>
-          <h2 style="margin:0 0 12px 0;" id="langTitle">Dil Seç</h2>
-          <div class="lang-list" id="langList">
-            <div class="lang-item selected" onclick="loadLanguage('tr-TR')">
-                <span>🇹🇷</span><span>Türkiye</span>
-            </div>
           </div>
         </div>
       </div>
@@ -131,7 +95,6 @@
   </div>
 
   <script src="scripts/starfield.js"></script>
-  <script src="scripts/language.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 </html>
