--- a/arc-msp.html
+++ b/arc-msp.html
@@ -33,7 +33,7 @@
     <!-- Lightbox -->
     <div id="lightbox" class="lightbox">
       <span class="close" onclick="closeLightbox()">&times;</span>
-      <img id="lightboxImg" src="" alt="preview">
+      <img id="lightboxImg" src="" alt="önizleme">
       <p id="lightboxCaption"></p>
     </div>
   </div>
