--- a/admin.html
+++ b/admin.html
@@ -25,13 +25,13 @@
         <span id="musicIcon">🔊</span>
       </button>
     </div>
-    <h1 class="title">MSP2 ARC Yönetici Paneli</h1>
+    <h1 class="title">MSP2 ARC Admin Paneli</h1>
 
     <!-- Admin Login -->
     <div id="loginSection" class="login-section">
-      <h2>Yönetici Erişimi</h2>
+      <h2>Admin Erişimi</h2>
       <div class="login-form">
-        <input type="password" id="adminPassword" placeholder="Yönetici şifresini girin">
+        <input type="password" id="adminPassword" placeholder="Admin şifresini girin">
         <button onclick="adminLogin()">Giriş Yap</button>
       </div>
     </div>
@@ -58,7 +58,6 @@
     </div>
   </div>
   
-  <script type="module" src="src/lib/supabase.js"></script>
   <script src="scripts/starfield.js"></script>
   <script src="scripts/music-control.js"></script>
   <script src="scripts/arc-msp.js"></script>
