--- a/arc-msp.html
+++ b/arc-msp.html
@@ -20,10 +20,17 @@
   <div class="container">
     <div class="top-controls">
       <button class="back-btn" onclick="goBackHome()">← Ana Sayfaya Dön</button>
-      <!-- Music Control Button -->
-      <button id="musicToggle" class="music-toggle">
-        <span id="musicIcon">🔊</span>
-      </button>
+      <div class="audio-controls">
+        <button id="soundSettingsToggle" class="control-btn" title="Ses Ayarları">
+          <span>🎚️</span>
+        </button>
+        <button id="soundEffectsToggle" class="control-btn" title="Ses Efektleri">
+          <span id="soundEffectsIcon">🔔</span>
+        </button>
+        <button id="musicToggle" class="control-btn" title="Müzik">
+          <span id="musicIcon">🔊</span>
+        </button>
+      </div>
     </div>
     <h1 class="title">MSP2 ARC</h1>
 
@@ -36,9 +43,35 @@
       <img id="lightboxImg" src="" alt="önizleme">
       <p id="lightboxCaption"></p>
     </div>
+
+    <!-- Sound Settings Modal -->
+    <div id="soundSettingsModal" class="modal-overlay" style="display:none;">
+      <div class="modal-bg">
+        <div class="modal">
+          <button class="modal-close" onclick="closeModal('soundSettingsModal')">&times;</button>
+          <h2 style="margin:0 0 20px 0;">Ses Ayarları</h2>
+          <div class="sound-settings">
+            <div class="setting-group">
+              <label for="musicVolume">Müzik Ses Düzeyi</label>
+              <input type="range" id="musicVolume" min="0" max="100" value="50" class="volume-slider">
+              <span id="musicVolumeDisplay">50%</span>
+            </div>
+            <div class="setting-group">
+              <label for="effectsVolume">Ses Efekti Düzeyi</label>
+              <input type="range" id="effectsVolume" min="0" max="100" value="50" class="volume-slider">
+              <span id="effectsVolumeDisplay">50%</span>
+            </div>
+            <div class="setting-group">
+              <button id="testSoundBtn" class="test-btn">Ses Efekti Test Et</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   
   <script src="scripts/starfield.js"></script>
+  <script src="scripts/sound-effects.js"></script>
   <script src="scripts/music-control.js"></script>
   <script src="scripts/arc-msp.js"></script>
 </body>
