--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           <!-- MSP2 Troll'ü YÜKLE Butonu (Yönlendirme) -->
           <div class="mod-install" style="margin-top: 10px;">
-            <a href="https://cdn.jsdelivr.net/gh/lombard001/soft@refs/heads/main/msp2.troll.js" 
+            <a href="https://cdn.jsdelivr.net/gh/lombard001/soft@refs/heads/main/msp2troll.user.js" 
                target="_blank" 
                class="install-btn">
                <span>🎭</span> MSP2 Troll'ü YÜKLE
